<?xml version="1.0"?>
<package>
  <name>agv_stage</name>
  <version>0.0.0</version>
  <description>The agv_stage package</description>

  <maintainer email="ramwij@todo.todo">ramwij</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agv_description</run_depend>
  <run_depend>stage_ros</run_depend>
</package>