<?xml version="1.0"?>
<package>
  <name>agv_stage</name>
  <version>1.0.0</version>
  <description>The agv_stage package</description>

  <maintainer email="vbove90@linux.com">Vincenzo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>agv_description</run_depend>
  <run_depend>stage_ros</run_depend>
</package>